# nnfs_book

./: pyproject.toml
Chapter_4/: Ch4_Final.py
Chapter_6/: Ch6_final.py
