[tool.poetry]
name = "nnfs-book"
version = "0.1.0"
description = ""
authors = ["hotratx <mgviero@gmail.com>"]
readme = "README.md"
packages = [{include = "nnfs_book"}]

[tool.poetry.dependencies]
python = "^3.11"
nnfs = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
